# CB_ASSIGNMENT

./: .gitignore  ASSUMPTIONS.md  README.md  license.txt  pyproject.toml
cb_maintenance/: hooks.py
cb_maintenance/cb_maintenance/: seed.py  tasks.py  utils.py
cb_maintenance/cb_maintenance/data/: PM_Case_Before__PM_Tracker_2026.csv  PM_Case_Outlets__Sheet1.csv  PM_Case_Ticket_Buckets__Sheet1.csv
cb_maintenance/cb_maintenance/doctype/asset_category/: asset_category.json  asset_category.py
cb_maintenance/cb_maintenance/doctype/maintenance_outlet/: maintenance_outlet.json  maintenance_outlet.py
cb_maintenance/cb_maintenance/doctype/maintenance_technician/: maintenance_technician.json  maintenance_technician.py
cb_maintenance/cb_maintenance/doctype/maintenance_ticket/: maintenance_ticket.json  maintenance_ticket.py
cb_maintenance/cb_maintenance/doctype/pm_schedule/: pm_schedule.js  pm_schedule.json  pm_schedule.py  pm_schedule_list.js
cb_maintenance/cb_maintenance/doctype/pm_template/: pm_template.json  pm_template.py
cb_maintenance/cb_maintenance/doctype/pm_template_task/: pm_template_task.json  pm_template_task.py
cb_maintenance/cb_maintenance/doctype/spare_part/: spare_part.json  spare_part.py
cb_maintenance/cb_maintenance/doctype/store_asset/: store_asset.json  store_asset.py
cb_maintenance/cb_maintenance/doctype/ticket_category/: ticket_category.json  ticket_category.py
cb_maintenance/cb_maintenance/doctype/zonal_office/: zonal_office.json  zonal_office.py
docs/: walkthrough.md
