[project]
name = "cb_maintenance"
authors = [
    { name = "Manas Malik", email = "manas@example.com" }
]
description = "Maintenance Operations (Planned PM + Reactive Tickets) for California Burrito, built on Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
